--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "readsdr"]
+	path = readsdr
+	url = https://github.com/jandraor/readsdr
+	shallow = true
+	registered = true
